[package]
name = "dbase_expr"
version = "0.2.0"
edition = "2024"

[dependencies]
arbitrary = "1.4.1"
chrono = "0.4.41"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[build-dependencies]
lalrpop = "0.20.2"

[features]
serde = ["dep:serde"]

[[example]]
name = "mssql_test"
path = "src/main_test_mssql.rs"
